Fix code block overflow and add background to inline code

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -81,6 +81,16 @@ $container-max-width: 1100px;
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    background-color: $global-muted-background;
+    border: 2px solid $global-muted-background;
+    border-radius: 4px;
+}
+
+
+@mixin hook-base-pre {
+    width: fit-content;
+    padding: 10px;
+
 }
 
 // 4. Import UIkit.
@@ -91,10 +101,11 @@ $container-max-width: 1100px;
 @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i|Fira+Code:400,500,700&display=swap');
 
 
-pre {
+div.sourceCode {
+    overflow: scroll;
+    background-color: $global-muted-background;
     border: none;
     border-left: 4px solid $global-primary-background;
-    background-color: $global-muted-background;
 }
 
 body {
